# databricks-uc-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-release.yml
databricks_uc/: README.md
mcp/: server.py
src/databricks_mcp/: main.py
src/databricks_mcp/api/: jobs_client.py  unity_catalog_client.py  utils.py
src/databricks_mcp/server/: mcp_server.py
src/databricks_uc/: main.py  server.py
src/databricks_uc/api/: cluster_client.py  jobs_client.py  unity_catalog_client.py  utils.py
src/databricks_uc/modules/: get_all_tables.py  get_table_details.py  utils.py
src/databricks_uc/server/: mcp_server.py
src/databricks_uc/uc/: get_all_tables.py  get_table_details.py  utils.py
