[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "databricks-mcp"
version = "0.1.0"
description = "(Unofficial) read-only Databricks MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "async-lru>=2.0.5",
    "mcp[cli]>=1.9.1",
]

[project.scripts]
databricks-mcp = "databricks_uc.main:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_uc"]